--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "serverless": "^4.4.11",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^14.3.4",
+    "serverless-jetpack": "^0.11.2",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.3"
   },
@@ -68,6 +69,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "serverless-jetpack": "^0.11.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
@@ -92,5 +94,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "serverless-jetpack": {
+      "serverless": "$serverless"
+    }
   }
 }
